--- a/templates/form.html
+++ b/templates/form.html
@@ -8,7 +8,7 @@
   <div class="form-group">
     <label class="col-md-4 control-label" for="textarea">Enter input</label>
     <div class="col-md-4">                     
-      <textarea class="form-control" id="textarea" name="textarea">copy paste input here</textarea>
+      <textarea class="form-control" id="textarea" name="textarea"></textarea>
     </div>
   </div>
   
@@ -44,6 +44,14 @@
       <button id="singlebutton" name="singlebutton" value="search" class="btn btn-primary">Search!</button>
     </div>
   </div>
+
+  <div class="form-group">
+      <label class="col-md-4 control-label" for="singlebutton"></label>
+      <div class="col-md-4">
+        <button id="singlebutton" name="singlebutton" value='clear'class="btn btn-primary">Clear Index</button>
+      </div>
+    </div>
+
   <script type="text/javascript">
     window.addEventListener('keydown',function(e){if(e.keyIdentifier=='U+000A'||e.keyIdentifier=='Enter'||e.keyCode==13){if(e.target.nodeName=='INPUT'&&e.target.type=='text'){e.preventDefault();return false;}}},true);
     </script>
