--- a/templates/form.html
+++ b/templates/form.html
@@ -56,6 +56,8 @@
     window.addEventListener('keydown',function(e){if(e.keyIdentifier=='U+000A'||e.keyIdentifier=='Enter'||e.keyCode==13){if(e.target.nodeName=='INPUT'&&e.target.type=='text'){e.preventDefault();return false;}}},true);
     </script>
   </fieldset>
+
+  <a href="/pdf">Try with PDF (Bonus!)</a>
   </form>
 
  
