--- a/templates/form.html
+++ b/templates/form.html
@@ -13,12 +13,12 @@
   </div>
   
   <!-- Button -->
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label class="col-md-4 control-label" for="singlebutton"></label>
     <div class="col-md-4">
       <button id="singlebutton" name="singlebutton" value="getInput" class="btn btn-primary">Submit Text</button>
     </div>
-  </div>
+  </div> -->
 
   <!-- Button -->
 <div class="form-group">
