--- a/templates/formPDF.html
+++ b/templates/formPDF.html
@@ -16,12 +16,12 @@
        
       
         <!-- Button -->
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label class="col-md-4 control-label" for="singlebutton"></label>
         <div class="col-md-4">
           <button id="singlebutton" name="singlebutton" value="indexDoc" class="btn btn-default">Index Text</button>
         </div>
-      </div>
+      </div> -->
       
       <!-- Text input-->
       <div class="form-group">
